Cobbler CHANGELOG

- Mon Dec 19 2008 - 1.4.1
- (BUGF) Cobbler check looks for right httpd on SUSE
- (BUGF) post_install_network_config snippet had bash errors
- (BUGF) don't run restorecon programatically
- (FEAT) have cobbler check mention when semanage rules should be applied

- Fri Dec 19 2008 - 1.4
- (----) Stable release of 1.3 development branch

- Fri Dec 19 2008 - 1.3
- (FEAT) ACLs to extend authz (see Wiki)
- (FEAT) puppet integration with --mgmt-classes and external nodes URL
- (FEAT) added puppet external nodes script, cobbler-ext-nodes
         see https://fedorahosted.org/cobbler/wiki/UsingCobblerWithConfigManagementSystem
- (FEAT) ability to use --enable-menu=0/1 to hide profiles from the PXE menu, and config setting to change default value for --enable-menu
- (FEAT) added livecd based physical machine cloner script to "contrib"
- (FEAT) enable import for debian ISOs and mirrors (1 distro at a time for now)
- (FEAT) auto-create rescue profile objects
- (FEAT) included network_config snippet and added --static=0/1 to system objects
- (FEAT) cobbler report gains additional options for Wiki formatting, csv, and showing only certain fields
- (FEAT) changed default kernel options to include ksdevice=bootif (not ksdevice=eth0) and added ipappend 2 to PXE
- (FEAT) distro edits now no longer require a sync to rebuild the PXE menu
- (BUGF) minor tweak to the blender function to remove a certain class of typing errors where a string is being blended with a list, should not have any noticable effect on existing installs
- (BUGF) add missing import of "_" in remote.py
- (FEAT) upgraded webui editing for multiple NICs
- (FEAT) "template_universe" variable created for snake's usage, variable contains all template variables and is also passed to the template.
- (FEAT) refactored import with better Debian/Ubuntu support
- (FEAT) Func integration snippets and new settings
- (FEAT) settings file and modules.conf now generated by setup.py using templates