@@ -5,6 +5,7 @@ Cobbler CHANGELOG
 - (BUGF) post_install_network_config snippet had bash errors
 - (BUGF) don't run restorecon programatically
 - (FEAT) have cobbler check mention when semanage rules should be applied
+- (BUGF) fix an obscure xmlrpclib corner case where a string that looks like an int can't be served because xmlrpclib thinks it's an int.  Applies to XMLRPC consumers only, not CobblerWeb or the cobbler CLI.
 
 - Fri Dec 19 2008 - 1.4
 - (----) Stable release of 1.3 development branch
